--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,14 +47,14 @@ members = [
 ]
 
 [profile.dev]
-# # Only include line tables in debuginfo. This reduces the size of target/ (after
-# # running tests) by almost half, while keeping the part of debuginfo which
-# # people care about the most (the part used to produce backtraces). This seems
-# # like something we would generally want (when actually running in a debugger
-# # you can just comment out the line).
-# #
-# # That said, if it turns out to hurt development more than expected, we could
-# # move this to only toggle this in CI
+# Only include line tables in debuginfo. This reduces the size of target/ (after
+# running tests) by almost half, while keeping the part of debuginfo which
+# people care about the most (the part used to produce backtraces). This seems
+# like something we would generally want (when actually running in a debugger
+# you can just comment out the line).
+#
+# That said, if it turns out to hurt development more than expected, we could
+# move this to only toggle this in CI
 debug = "line-tables-only"
 
 [profile.dev.build-override]
